fix: alignment and reset scroll of content container when step changes.

--- a/src/routes/bookings/new/style.css
+++ b/src/routes/bookings/new/style.css
@@ -1,7 +1,7 @@
 #new-booking {
     display: flex;
     flex-direction: column;
-
+    width: 100%;
 }
 
 #new-booking-content-container {
